update for uliweb3

--- a/projects/guestbook/apps/settings.ini
+++ b/projects/guestbook/apps/settings.ini
@@ -6,7 +6,7 @@ INSTALLED_APPS = [
     'uliweb.contrib.orm',
     'uliweb.contrib.staticfiles',
     'uliweb.contrib.template',
-    'plugs.ui.yaml',
+    'uliweb_apps.site',
     'ckeditor',
     'GuestBook',
 ]
